--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="app.css">
 </head>
 
 <body>
@@ -16,9 +17,7 @@
                 <button class="btn btn-success my-3" id="character-visible-btn">Karakterleri Göster</button>
             </div>
             <div class="row mb-3 justify-content-center" id="filter-card-container"></div>
-            <div class="row" id="character-container">
-
-            </div>
+            <div class="row" id="character-container"></div>
         </div>
     </section>
 
